WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64263
libsoup-CRITICAL **: soup_message_io_pause: assertion `io != NULL' failed
https://bugs.webkit.org/show_bug.cgi?id=64263
Summary
libsoup-CRITICAL **: soup_message_io_pause: assertion `io != NULL' failed
arno.
Reported
2011-07-11 04:57:53 PDT
Hi, when a javascript alert is shown before all http request are done, a assertion is raised. Load testcase url in GtkLauncher to reproduce.
Attachments
proposed patch
(1.89 KB, patch)
2011-08-01 09:02 PDT
,
Philippe Normand
mrobinson
: review-
Details
Formatted Diff
Diff
proposed patch
(4.45 KB, patch)
2011-08-03 02:56 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(2.21 KB, patch)
2011-10-01 00:16 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2011-07-28 01:53:22 PDT
I think that error is happening due to the current implementation of deferred loading.
Philippe Normand
Comment 2
2011-08-01 09:02:37 PDT
Created
attachment 102522
[details]
proposed patch
Martin Robinson
Comment 3
2011-08-01 09:09:53 PDT
Comment on
attachment 102522
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102522&action=review
> Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:708 > + if ((soupMessage->status_code == SOUP_STATUS_NONE) || (soupMessage->status_code ==SOUP_STATUS_OK))
You are missing a space after the second ==. Shouldn't it be != too?
Philippe Normand
Comment 4
2011-08-03 02:56:33 PDT
Created
attachment 102759
[details]
proposed patch
Martin Robinson
Comment 5
2011-08-03 03:14:35 PDT
Comment on
attachment 102759
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102759&action=review
> Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:369 > + ResourceHandleInternal* d = handle->getInternal(); > + d->m_finished = true;
This can be one line.
Philippe Normand
Comment 6
2011-08-03 04:15:45 PDT
Committed
r92271
: <
http://trac.webkit.org/changeset/92271
>
Martin Robinson
Comment 7
2011-10-01 00:12:37 PDT
Re-opening this issue because I still see this problem with Epiphany on boingboing.net.
Martin Robinson
Comment 8
2011-10-01 00:16:20 PDT
Created
attachment 109401
[details]
Patch
Martin Robinson
Comment 9
2011-10-01 00:16:56 PDT
Philippe, do you mind doing a review for this?
Sergio Villar Senin
Comment 10
2011-10-05 00:41:49 PDT
(In reply to
comment #8
)
> Created an attachment (id=109401) [details] > Patch
The patch is fine for me BTW.
Xan Lopez
Comment 11
2011-10-05 02:25:34 PDT
Comment on
attachment 109401
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=109401&action=review
> Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:-708 > - if (d->m_finished || soupMessage->status_code == SOUP_STATUS_NONE)
It's not immediately obvious why it's OK to remove the status_code check, so please add a comment in the ChangeLog about it.
Martin Robinson
Comment 12
2011-10-05 09:38:10 PDT
Committed
r96715
: <
http://trac.webkit.org/changeset/96715
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug