        libsoup-CRITICAL **: soup_message_io_pause: assertion `io != NULL' failed         https://bugs.webkit.org/show_bug.cgi?id=64263

Reviewed by Martin Robinson.

        Avoid any operation on not yet started messages and completed messages.

        * platform/network/ResourceHandleInternal.h:
        (WebCore::ResourceHandleInternal::ResourceHandleInternal):
        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::finishedCallback):
        (WebCore::startHTTPRequest):
        (WebCore::ResourceHandle::platformSetDefersLoading):

Canonical link: https://commits.webkit.org/81409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92271 268f45cc-cd09-0410-ab3c-d52691b4dbfc