Source/WebCore/platform/network/ResourceHandleInternal.h
@@ -113,6 +113,8 @@ namespace WebCore {
 #endif
 #if USE(SOUP)
             , m_cancelled(false)
+            , m_finished(false)
+            , m_finishedHandler(0)
             , m_buffer(0)
             , m_bodySize(0)
             , m_bodyDataSent(0)
@@ -191,6 +193,8 @@ namespace WebCore {
         GRefPtr<SoupMessage> m_soupMessage;
         ResourceResponse m_response;
         bool m_cancelled;
+        bool m_finished;
+        gulong m_finishedHandler;
         GRefPtr<SoupRequest> m_soupRequest;
         GRefPtr<GInputStream> m_inputStream;
         GRefPtr<GCancellable> m_cancellable;
